# job-search-agent-realtime

./: .gitignore  README.md  docker-compose.yml  orchestrator.sh
app/: .env  .env.sample  .templates.sample.json  Dockerfile  main.py  package-lock.json  package.json  pyproject.toml
app/services/job_search_agent/: agent.py  dtos.py  templates.py
app/services/job_search_linkedin_agent/: agent.py
app/services/spreadsheet_parser/: parser.py
app/utils/: templates.py
