[project]
name = "job-search-agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.3",
    "lxml>=6.0.0",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
]
